<resources>
    <string name="app_name">Flashcards</string>
    <string name="failed_to_load_flashcard_text">Failed to load flashcard</string>
    <string name="edit_flashcard_button_text">Edit</string>
    <string name="flashcard_back_hint_text">Back</string>
    <string name="flashcard_front_hint_text">Front</string>
    <string name="save_flashcard_button_text">Save</string>
    <string name="flashcard_list_button_text">Flashcard List</string>
    <string name="no_flashcards_to_show_text">No flashcards to show</string>
...
    <string name="confirm_delete_all_flashcards_text">Are you sure you want to delete all
        flashcards?
    </string>
    <string name="confirm_delete_flashcards_from_category_text">Are you sure you want to delete all
        flashcards from %s?
    </string>
    <string name="all_flashcards_spinner_text">All</string>
    <string name="play_button_title">Play</string>
    <string name="flashcard_must_have_category_message_text">Flashcard must have a category</string>
    <string name="flashcard_must_have_front_message_text">Flashcard must have a front</string>
    <string name="flashcard_must_have_back_message_text">Flashcard must have a back</string>
    <string name="discard_changes_title_text">Discard Changes?</string>
    <string name="discard_changes_message_text">You have unsaved changes. Are you sure you want to
...
